--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,12 +13,19 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.23"
+        uses: ./.github/actions/setup-go
 
       - name: Build
         run: go build -v ./...
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: ./.github/actions/setup-go
 
       - name: Test
         run: go test -v ./...
